Prevent truncation of category titles

--- a/common/common.scss
+++ b/common/common.scss
@@ -1,1 +1,6 @@
 // Theme's SCSS
+.badge-category__name {
+    white-space: normal;
+    overflow: visible;
+    text-overflow: initial;
+}
